--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jarvis</title>
-<link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon" />
     <!-- Bootsrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -30,33 +30,77 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="Oval" class="mb-4">
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <div
-            class="d-flex justify-content-center align-items-center"
-            style="height: 80vh"
-          >
-            <canvas
-              id="canvasOne"
-              width="700"
-              height="420"
-              style="position: absolute"
-            ></canvas>
-            <div id="JarvisHood">
-              <div class="square">
-                <span class="circle"></span>
-                <span class="circle"></span>
-                <span class="circle"></span>
+    <div class="container">
+      <section id="Oval" class="mb-4">
+        <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+            <div
+              class="d-flex justify-content-center align-items-center"
+              style="height: 80vh"
+            >
+              <canvas
+                id="canvasOne"
+                width="700"
+                height="420"
+                style="position: absolute"
+              ></canvas>
+              <div id="JarvisHood">
+                <div class="square">
+                  <span class="circle"></span>
+                  <span class="circle"></span>
+                  <span class="circle"></span>
+                </div>
+              </div>
+            </div>
+            <h5 class="text-light text text-center">Ask me anything</h5>
+            <div class="col-md-12 mt-4 pt-4">
+              <div class="text-center">
+                <div id="TextInput" class="d-flex">
+                  <input
+                    type="text"
+                    class="input-field"
+                    name="chatbox"
+                    id="chatbox"
+                    placeholder="type here ...."
+                  />
+                  <button id="MicBtn" class="glow-on-hover">
+                    <i class="bi bi-mic"></i>
+                  </button>
+                  <button id="chatBtn" class="glow-on-hover">
+                    <i class="bi bi-chat-dots"></i>
+                  </button>
+                  <button id="settingBtn" class="glow-on-hover">
+                    <i class="bi bi-gear"></i>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <h5 class="text-light text text-center">Ask me anything</h5>
+          <div class="col-md-1"></div>
         </div>
-        <div class="col-md-1"></div>
-      </div>
-    </section>
+      </section>
+      <section id="SiriWave" class="mb-4" hidden>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div
+                class="d-flex justify-content-center align-items-center"
+                style="height: 100vh"
+              >
+                <div class="">
+                  <p class="text-start text-light mb-4 siri-message">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Illo sunt veritatis ullam
+                  </p>
+                  <div id="siri-container"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <!--Jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -83,6 +127,5 @@
 
     <script src="main.js"></script>
     <script src="/eel.js"></script>
-
   </body>
 </html>
