--- a/www/index.html
+++ b/www/index.html
@@ -90,8 +90,7 @@
               >
                 <div class="">
                   <p class="text-start text-light mb-4 siri-message">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Illo sunt veritatis ullam
+                    Hello, I am J.A.R.V.I.S
                   </p>
                   <div id="siri-container"></div>
                 </div>
@@ -126,6 +125,7 @@
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
 
     <script src="main.js"></script>
+    <script src="controller.js"></script>
     <script src="/eel.js"></script>
   </body>
 </html>
